--- a/overlays/staging/deployment-patch.yaml
+++ b/overlays/staging/deployment-patch.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: microbot-staging
+  name: microbot
 spec:
   replicas: 2 # จำนวน replica สำหรับ Dev
 #  template:
