--- a/overlays/staging/kustomization.yaml
+++ b/overlays/staging/kustomization.yaml
@@ -9,7 +9,7 @@ patches:
   target:
     kind: Deployment
     name: microbot
-- path: deployment-patch.yaml
+- path: service-patch.yaml
   target:
     kind: Service
     name: microbot-svc
