--- a/matrix-example/app2/overlays/dev/deployment-patch.yaml
+++ b/matrix-example/app2/overlays/dev/deployment-patch.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: microbot
+  name: microbot2
 spec:
   replicas: 1 # จำนวน replica สำหรับ Dev
 #  template:
